@@ -1,2 +1,0 @@
-AnyObjectId[bbb5aa7ad5bcea61c5c66ceb2ba340431cc7262d] was removed in git history.
-Apache SVN contains full history.
