@@ -49,6 +49,46 @@ begin_import
 import|import
 name|java
 operator|.
+name|io
+operator|.
+name|BufferedReader
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
+name|io
+operator|.
+name|InputStreamReader
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
+name|nio
+operator|.
+name|charset
+operator|.
+name|CharsetDecoder
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
+name|nio
+operator|.
+name|charset
+operator|.
+name|CodingErrorAction
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
 name|util
 operator|.
 name|HashMap
@@ -108,6 +148,19 @@ operator|.
 name|util
 operator|.
 name|ThreadInterruptedException
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|util
+operator|.
+name|IOUtils
 import|;
 end_import
 begin_import
@@ -837,6 +890,31 @@ name|is
 decl_stmt|;
 try|try
 block|{
+comment|// To work around a bug in XERCES (XERCESJ-1257), we assume the XML is always UTF8, so we simply provide reader.
+name|CharsetDecoder
+name|decoder
+init|=
+name|IOUtils
+operator|.
+name|CHARSET_UTF_8
+operator|.
+name|newDecoder
+argument_list|()
+operator|.
+name|onMalformedInput
+argument_list|(
+name|CodingErrorAction
+operator|.
+name|REPORT
+argument_list|)
+operator|.
+name|onUnmappableCharacter
+argument_list|(
+name|CodingErrorAction
+operator|.
+name|REPORT
+argument_list|)
+decl_stmt|;
 name|reader
 operator|.
 name|parse
@@ -844,7 +922,17 @@ argument_list|(
 operator|new
 name|InputSource
 argument_list|(
+operator|new
+name|BufferedReader
+argument_list|(
+operator|new
+name|InputStreamReader
+argument_list|(
 name|localFileIS
+argument_list|,
+name|decoder
+argument_list|)
+argument_list|)
 argument_list|)
 argument_list|)
 expr_stmt|;
